refactor!: custom user management