@@ -1,27 +1,37 @@
 package me.whereareiam.yui.common.service.requirement.evaluators;
 
-import me.whereareiam.yui.model.profile.UserProfile;
+import me.whereareiam.yui.model.fluctlight.Fluctlight;
 import me.whereareiam.yui.model.requirement.type.UserRequirement;
 import me.whereareiam.yui.model.requirement.RequirementContext;
 import me.whereareiam.yui.type.requirement.RequirementCondition;
+import net.dv8tion.jda.api.entities.User;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.junit.jupiter.api.extension.ExtendWith;
 
 import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.when;
 
+@ExtendWith(MockitoExtension.class)
 class UserRequirementEvaluatorTest {
+	@Mock
+	private User jdaUser;
+
 	private UserRequirementEvaluator evaluator;
 	private RequirementContext context;
 
 	@BeforeEach
 	void setUp() {
 		evaluator = new UserRequirementEvaluator();
-		UserProfile userProfile = new UserProfile(12345L);
-		context = new RequirementContext("test", userProfile);
+		when(jdaUser.getIdLong()).thenReturn(12345L);
+		Fluctlight fluctlight = new Fluctlight(jdaUser);
+		context = new RequirementContext("test", fluctlight);
 	}
 
 	@Test
@@ -78,7 +88,7 @@ class UserRequirementEvaluatorTest {
 		UserRequirement userReq = new UserRequirement(
 				RequirementCondition.EQUALS,
 				true,
-				Arrays.asList(12345L)
+				List.of(12345L)
 		);
 		assertTrue(evaluator.evaluate(context, userReq));
 	}
@@ -140,7 +150,7 @@ class UserRequirementEvaluatorTest {
 				false,
 				Arrays.asList(12345L, 67890L)
 		);
-		// Test raw evaluator behavior - this should return true because user is in the list
+		// Test raw evaluator behavior - this should return true because fluctlight is in the list
 		// The expected=false logic is handled by DefaultRequirementEvaluator, not this evaluator
 		assertTrue(evaluator.evaluate(context, userReq));
 	}
@@ -152,28 +162,8 @@ class UserRequirementEvaluatorTest {
 				false,
 				Arrays.asList(67890L, 11111L)
 		);
-		// Test raw evaluator behavior - this should return false because user is NOT in the list
+		// Test raw evaluator behavior - this should return false because fluctlight is NOT in the list
 		// The expected=false logic is handled by DefaultRequirementEvaluator, not this evaluator
 		assertFalse(evaluator.evaluate(context, userReq));
-	}
-
-	@Test
-	void testDebugExpectedFalseLogic() {
-		// Let's debug what's happening with expected=false
-		UserRequirement userReq = new UserRequirement(
-				RequirementCondition.HAS,
-				false,
-				Arrays.asList(12345L, 67890L)
-		);
-
-		// Our user ID is 12345L
-		// Required user IDs are [12345L, 67890L]
-		// HAS condition: user must be in the list
-		// Result: user 12345L is in the list, so result = true
-		// Note: This evaluator only returns the raw result, it doesn't handle expected=false logic
-
-		boolean result = evaluator.evaluate(context, userReq);
-		System.out.println("Debug: expected=false, user in list, raw result=" + result);
-		assertTrue(result); // Raw evaluator should return true
 	}
 }
